# fenics-pipeline

./: Dockerfile  LICENSE.txt  README.md  START_HERE.ipynb  getting_started.ipynb
fenics-pipeline/: .gitignore  Dockerfile  Makefile  PATCHES.md  README.md  docker-compose.yml
fenics-pipeline/notebooks/: 00_env_validation.ipynb  00_generate_test_cases.ipynb  00_import_step.ipynb  01_geometry_openscad.ipynb  02_mesh_gmsh.ipynb  03_fea_fenicsx.ipynb  04_simp_optimization.ipynb  05_stl_export.ipynb  pipeline_full.ipynb
fenics-pipeline/scad/: base_part_params.json  cantilever_arm.scad  cantilever_arm_params.json  motor_mount.scad  motor_mount_params.json  optimization_domain.scad  params.json  tripod_mount_base.scad  tripod_mount_base_params.json
fenics-pipeline/scripts/: build_solver.sh  generate_opt_domain.py  (+2 more)
fenics-pipeline/solver/: .gitignore  Cargo.toml
fenics-pipeline/solver/src/: assembly.rs  filter.rs  gpu_solver.rs  io.rs  main.rs  oc_update.rs  sensitivity.rs  simp.rs  solver.rs  types.rs
notebooks/: 00_env_validation.ipynb  00_generate_test_cases.ipynb  00_import_step.ipynb  01_geometry_openscad.ipynb  02_mesh_gmsh.ipynb  03_fea_fenicsx.ipynb  04_simp_optimization.ipynb  05_stl_export.ipynb  06_part_validation.ipynb  pipeline_full.ipynb
scad/: base_part.scad  base_part_params.json  cantilever_arm.scad  cantilever_arm_params.json  conrod.scad  conrod_params.json  motor_mount_params.json  tripod_mount_base_params.json
scripts/: check_environment.sh  voxelize.py
solver/: Cargo.toml
tests/: test_skip_meshing_wiring.py  test_solver_interface.py
(+44 files in other folders)
