[package]
name    = "simp_solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simp_solver"
path = "src/main.rs"

[dependencies]
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
faer       = { version = "0.19", features = ["sparse"] }
rayon      = "1.10"

[profile.release]
opt-level = 3
lto       = true