[package]
name    = "simp_solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simp_solver"
path = "src/main.rs"

[dependencies]
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
faer = "0.19"
rayon      = "1.10"
cudarc = { version = "0.19", features = ["cuda-12060", "cusparse", "driver", "fallback-dynamic-loading"], optional = true }

[features]
gpu = ["cudarc"]

[profile.release]
opt-level = 3
lto       = true